@@ -1,29 +1,18 @@
-apply plugin: 'com.android.application'
-//apply plugin: 'me.tatarka.retrolambda'
-
-buildscript {
-    repositories {
-        mavenCentral()
-    }
-
-    dependencies {
-        //classpath 'me.tatarka:gradle-retrolambda:3.2.5'
-    }
-}
-
-// Required because retrolambda is on maven central
-repositories {
-    mavenCentral()
+plugins {
+    id 'com.android.application'
+    id 'com.google.gms.google-services'
 }
 
 android {
-    compileSdkVersion 34
-    compileSdk 34
+    //noinspection GradleDependency
+    compileSdkVersion 30
+    //noinspection GradleDependency
+    compileSdk 30
     defaultConfig {
         applicationId "victoralbertos.io.rxfcm"
         minSdkVersion 19
         //noinspection ExpiredTargetSdkVersion
-        targetSdkVersion 34
+        targetSdkVersion 30
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
@@ -36,20 +25,20 @@ android {
         }
     }
     compileOptions {
-        targetCompatibility 1.8
-        sourceCompatibility 1.8
+        targetCompatibility java_version
+        sourceCompatibility java_version
     }
     namespace 'victoralbertos.io.rxfcm'
-    lint {
-        abortOnError false
-    }
+    //lint {
+    //    abortOnError false
+    //}
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(':rx_fcm')
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation platform('com.google.firebase:firebase-bom:32.7.3')
+    //implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation platform('com.google.firebase:firebase-bom:27.1.0')
     //implementation 'com.google.firebase:firebase-core'
     //implementation 'com.google.firebase:firebase-core:11.6.0'
 
@@ -58,8 +47,8 @@ dependencies {
 
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
 
-    implementation 'com.google.android.material:material:1.11.0'
-    implementation 'androidx.annotation:annotation:1.7.1'
+    implementation 'com.google.android.material:material:1.4.0'
+    implementation 'androidx.annotation:annotation:1.3.0'
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test:rules:1.5.0'
@@ -78,5 +67,22 @@ configurations.all {
     resolutionStrategy.force "com.android.support:support-annotations:24.1.1"
 }
 
-apply plugin: 'com.google.gms.google-services'
-
+// enable internal JDK API access at runtime (AGP Fix)
+tasks.withType(JavaCompile).configureEach {
+    options.fork = true
+    options.forkOptions.jvmArgs += [
+            // essential for butterknife
+            '--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
+            // if you need Glide or LomBok
+            // these may not be the exact list, but it works for me
+            '--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
+            '--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED',
+            '--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
+            '--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED',
+            '--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED',
+            '--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
+            '--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
+            '--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
+            '--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED',
+    ]
+}
